# fixed

./: .ghci  .gitignore  CHANGELOG  README.md  flake.nix  generate_inv.sh  ppad-fixed.cabal  ppad-fw.cabal
bench/: Main.hs  Weight.hs
bench/Criterion/: Choice.hs  Limb.hs  Wide.hs
etc/: generate_inv.sh  generate_sqrt.sh
lib/Data/: Choice.hs
lib/Data/Word/: Extended.hs  Limb.hs  Montgomery.hs  Wide.hs  Wider.hs  Word256.hs
lib/Numeric/Montgomery/Secp256k1/: Curve.hs  Scalar.hs
src/: Main.hs
test/: Limb.hs  Main.hs  Wide.hs  Wider.hs
test/Montgomery/: Curve.hs  Scalar.hs
