cabal-version:      3.0
name:               ppad-fixed
version:            0.0.1
synopsis:           A large fixed-width integer library.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Data
build-type:         Simple
tested-with:        GHC == { 9.8.1 }
extra-doc-files:    CHANGELOG
description:
  Representations for, and operations on, large fixed-width integers.

source-repository head
  type:     git
  location: git.ppad.tech/fixed.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Data.Word.Limb
    , Data.Word.Montgomery
  build-depends:
      base >= 4.9 && < 5
    , deepseq >= 1.5 && < 1.6
    , primitive >= 0.8 && < 0.10

