cabal-version:      3.0
name:               ppad-fw
version:            0.1.0
synopsis:           Fixed-width integers
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Data
build-type:         Simple
tested-with:        GHC == { 9.8.1 }
extra-doc-files:    CHANGELOG
description:
  Fixed-width integer types and operations.

source-repository head
  type:     git
  location: git.ppad.tech/sha256.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Data.Word.Extended
  build-depends:
      base >= 4.9 && < 5

